Fixed jumping div issue

--- a/music.css
+++ b/music.css
@@ -78,12 +78,13 @@ body {
 }
 
 #navigation{
-	margin-top:-400px;
+	top:0;
 	right:0;
+	margin-top:125px;
 	width: calc(90% - 640px);
 	max-height: 400px;
 	overflow-y:auto;
-	float: right;
+	display:none;
 	position:absolute;
 }
 
